--- a/index.html
+++ b/index.html
@@ -390,117 +390,117 @@
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".wordpress-website">WordPress Websites</li>
-            <li data-filter=".filter-books">WordPress Plugins</li>
-            <li data-filter=".filter-product">WordPress WooCommerce</li>
+            <li data-filter=".wordpress-plugin">WordPress Plugins</li>
+            <li data-filter=".wordpress-woocommerce">WordPress WooCommerce</li>
             <li data-filter=".htmlcssjavascript">HTML/CSS/JavaScript</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-plugin">
               <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/instant-emoji-reactions/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Product 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/product-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Branding 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Books 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>App 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Product 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/product-2.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Instant Emoji Reactions</h4>
+                  <p>A custom WordPress theme published in the official WordPress repository.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/instant-emoji-reactions/hero-section.webp" title="Instant Emoji Reactions" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-instant-emoji-reactions.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
               <div class="portfolio-content h-100">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/devops-pakistan/hero-section.webp" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>DevOps Pakistan</h4>
+                  <p>A WordPress website built using a pre-designed theme.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/devops-pakistan/hero-section.webp" title="DevOps Pakistan" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-devops-pakistan.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
+              <div class="portfolio-content h-100">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/growthally/hero-section.webp" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>GrowthAlly</h4>
+                  <p>A WordPress website built using a custom theme.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/growthally/hero-section.webp" title="GrowthAlly" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-growthally.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
+              <div class="portfolio-content h-100">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/tecbrix/hero-section.webp" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>TecBrix</h4>
+                  <p>A WordPress website built using a pre-designed theme.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/tecbrix/hero-section.webp" title="TecBrix" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-tecbrix.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-woocommerce">
+              <div class="portfolio-content h-100">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/iconic-wrist/hero-section.webp" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Iconic Wrist</h4>
+                  <p>A WordPress website built using a custom theme.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/iconic-wrist/hero-section.webp" title="Iconic Wrist" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-iconic-wrist.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
+              <div class="portfolio-content h-100">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/tax-savvy-consultant/hero-section.webp" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Tax Savvy Consultant</h4>
+                  <p>A WordPress website built using a custom theme.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/tax-savvy-consultant/hero-section.webp" title="Tax Savvy Consultant" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-tax-savvy-consultant.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+            
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
+              <div class="portfolio-content h-100">
                 <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/gm-panhwar-institute/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>GM Panhwar Institute</h4>
-                  <p>A WordPress Custom Theme</p>
+                  <p>A WordPress website built using a custom theme.</p>
                   <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/gm-panhwar-institute/hero-section.webp" title="GM Panhwar Institute" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://usamakhalid847.github.io/portfolio/project-panhwar-institute.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-woocommerce">
               <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/mg-chen3/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Books 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/books-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>MG Chen3</h4>
+                  <p>A custom WooCommerce store built on WordPress with tailored functionalities for enhanced user experience.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/mg-chen3/hero-section.webp" title="MG Chen3" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-mg-chen3.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
               <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/parking-lot-repair/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Parking Lot Repair NM</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/app-3.jpg" title="Parking Lot Repair NM" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <p>A WordPress website built using a custom theme.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/parking-lot-repair/hero-section.webp" title="Parking Lot Repair NM" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-parking-lot-repair.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
