commit new project changes

--- a/project-parking-lot-repair.html
+++ b/project-parking-lot-repair.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>GM Panhwar Institute - Usama Khalid Portfolio</title>
+  <title>Parking Lot Repair NM - Usama Khalid Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta name="robots" content="noindex, nofollow">
@@ -115,7 +115,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/gm-panhwar-institute/home-page.webp" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/temporary-fence/home-page.webp" alt="">
                 </div>
 
               </div>
@@ -128,14 +128,14 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: WordPress Websites</li>
-                <li><strong>Client</strong>: GM Panhwar Institute</li>
-                <li><strong>Project date</strong>: October, 2024</li>
-                <li><strong>Project URL</strong>: <a href="https://drgmpanhwarinstitute.org/" target="_blank">drgmpanhwarinstitute.org</a></li>
+                <li><strong>Client</strong>: Temporary Fence LLC</li>
+                <li><strong>Project date</strong>: September, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://temporaryfencellc.com/" target="_blank">temporaryfencellc.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>GM Panhwar Institute</h2>
-              <p>✔ Designed and developed a WordPress website with a custom theme, built from a provided Figma design using HTML, CSS, and Bootstrap.</p>
+              <h2>Temporary Fence LLC</h2>
+              <p>✔ Built a custom WordPress theme with geolocation-based redirection and dynamic content management for a fencing service company</p>
             </div>
           </div>
 
