--- a/project-temporary-fence.html
+++ b/project-temporary-fence.html
@@ -7,6 +7,7 @@
   <title>Temporary Fence LLC - Usama Khalid Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <meta name="robots" content="noindex, nofollow">
 
   <!-- Favicons -->
   <link href="https://usamakhalid847.github.io/portfolio/assets/img/favicon.png" rel="icon">
