--- a/project-parking-lot-repair.html
+++ b/project-parking-lot-repair.html
@@ -115,7 +115,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/temporary-fence/home-page.webp" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/parking-lot-repair/home-page.webp" alt="">
                 </div>
 
               </div>
@@ -128,14 +128,14 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: WordPress Websites</li>
-                <li><strong>Client</strong>: Temporary Fence LLC</li>
-                <li><strong>Project date</strong>: September, 2024</li>
-                <li><strong>Project URL</strong>: <a href="https://temporaryfencellc.com/" target="_blank">temporaryfencellc.com</a></li>
+                <li><strong>Client</strong>: Parking Lot Repair NM</li>
+                <li><strong>Project date</strong>: October, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://www.parkinglotrepairnm.com/" target="_blank">parkinglotrepairnm.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Temporary Fence LLC</h2>
-              <p>✔ Built a custom WordPress theme with geolocation-based redirection and dynamic content management for a fencing service company</p>
+              <h2>Parking Lot Repair NM</h2>
+              <p>✔ Developed a custom WordPress theme tailored for a pavement maintenance and repair service provider.</p>
             </div>
           </div>
 
