--- a/project-instant-emoji-reactions.html
+++ b/project-instant-emoji-reactions.html
@@ -115,7 +115,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/devops-pakistan/home-page.webp" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/instant-emoji-reactions/home-page.webp" alt="">
                 </div>
 
               </div>
@@ -127,19 +127,18 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: WordPress Websites</li>
+                <li><strong>Category</strong>: WordPress Plugins</li>
                 <li><strong>Client</strong>: Instant Emoji Reactions</li>
-                <li><strong>Project date</strong>: February, 2025</li>
-                <li><strong>Project URL</strong>: <a href="https://devopspakistan.com/" target="_blank">devopspakistan.com</a></li>
+                <li><strong>Project date</strong>: March, 2025</li>
+                <li><strong>Project URL</strong>: <a href="https://wordpress.org/plugins/instant-emoji-reactions/" target="_blank">https://wordpress.org/plugins/instant-emoji-reactions/</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Instant Emoji Reactions</h2>
-              <p>✔ Converted multiple Figma-designed pages into Elementor.</p>
-              <p>✔ Developed custom pages using HTML and CSS to match requirements and provided designs.</p>
-              <p>✔ Removed malware and implemented a security checklist.</p>
-              <p>✔ Integrated an LMS system into the website.</p>
-              <p>✔ Independently managed website maintenance and updates.</p>
+              <p>✔ Designed and developed a custom WordPress plugin that adds emoji reactions to posts and custom post types, enabling user engagement for both guest and logged-in users.</p>
+              <p>✔ Implemented a system to store reactions per post, providing valuable interaction metrics and enhancing user feedback on blogs, forums, and community-driven websites.</p>
+              <p>✔ Enhanced user experience by allowing visitors to express emotions such as Agree, Disagree, Love, Laugh, and Angry through intuitive emoji reactions.</p>
+              <p>✔ Optimized plugin performance for seamless integration with existing WordPress themes and plugins.</p>
             </div>
           </div>
 
