images updates for projects

--- a/project-instant-emoji-reactions.html
+++ b/project-instant-emoji-reactions.html
@@ -115,7 +115,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/instant-emoji-reactions/home-page.webp" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/instant-emoji-reactions/hero-section.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/instant-emoji-reactions/plugin-reactions-view.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/instant-emoji-reactions/plugin-settings-view.webp" alt="">
                 </div>
 
               </div>
