--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/devops-pakistan/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>DevOps Pakistan</h4>
-                  <p>A WordPress website built using a pre-designed theme.</p>
+                  <p>A WordPress website built using a Prebuilt theme.</p>
                   <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/devops-pakistan/hero-section.webp" title="DevOps Pakistan" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://usamakhalid847.github.io/portfolio/project-devops-pakistan.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -438,7 +438,7 @@
                 <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/tecbrix/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>TecBrix</h4>
-                  <p>A WordPress website built using a pre-designed theme.</p>
+                  <p>A WordPress website built using a Prebuilt theme.</p>
                   <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/tecbrix/hero-section.webp" title="TecBrix" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://usamakhalid847.github.io/portfolio/project-tecbrix.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -462,7 +462,7 @@
                 <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/tax-savvy-consultant/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Tax Savvy Consultant</h4>
-                  <p>A WordPress website built using a custom theme.</p>
+                  <p>A WordPress website built using a Prebuilt theme.</p>
                   <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/tax-savvy-consultant/hero-section.webp" title="Tax Savvy Consultant" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://usamakhalid847.github.io/portfolio/project-tax-savvy-consultant.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
