--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/iconic-wrist/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Iconic Wrist</h4>
-                  <p>A WordPress website built using a custom theme.</p>
+                  <p>A WooCommerce store built on a Prebuilt WordPress theme.</p>
                   <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/iconic-wrist/hero-section.webp" title="Iconic Wrist" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://usamakhalid847.github.io/portfolio/project-iconic-wrist.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
