Project Detail Update

--- a/project-growthally.html
+++ b/project-growthally.html
@@ -135,7 +135,14 @@
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>GrowthAlly</h2>
-              <p>✔ Designed and developed a custom WordPress theme tailored to the client's Figma design, ensuring a seamless and high-performing website for GrowthAlly to support agencies in scaling their marketing efforts.</p>
+              <p><strong>✔ Custom WordPress Theme Development:</strong> Designed and developed a fully custom WordPress theme from scratch based on the client's Figma design, ensuring a pixel-perfect and high-performance website.</p>
+              <p><strong>✔ Service Showcase & Case Studies:</strong> Built dedicated sections to effectively present the company's services, case studies, and client success stories, enhancing credibility and user engagement.</p>
+              <p><strong>✔ Advanced Gravity Forms Integration:</strong> Implemented <strong>Gravity Forms</strong> with <strong>AJAX functionality</strong>, allowing seamless form submissions without page reloads for an improved user experience.</p>
+              <p><strong>✔ Dynamic Content Management:</strong> Utilized <strong>Custom Post Types (CPTs) and Advanced Custom Fields (ACF)</strong> to make service listings, case studies, and testimonials easily manageable from the WordPress dashboard.</p>
+              <p><strong>✔ SEO-Friendly & Fast Performance:</strong> Optimized website speed, structured data, and meta tags for improved <strong>SEO rankings</strong> and enhanced loading times.</p>
+              <p><strong>✔ User-Centric Design:</strong> Ensured a <strong>fully responsive</strong> and <strong>mobile-friendly</strong> experience, maintaining consistency across all screen sizes.</p>
+              <p><strong>✔ CRM & Lead Management Integration:</strong> Integrated forms with <strong>CRM tools</strong> to streamline lead collection and management for sales and marketing teams.</p>
+              <p><strong>✔ Scalable & Future-Proof Development:</strong> Developed the theme with scalability in mind, allowing for easy expansion as the business grows.</p>
             </div>
           </div>
 
