--- a/project-devops-pakistan.html
+++ b/project-devops-pakistan.html
@@ -135,11 +135,11 @@
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>DevOps Pakistan</h2>
-              <p>✔ Converted multiple Figma-designed pages into Elementor.</p>
-              <p>✔ Developed custom pages using HTML and CSS to match requirements and provided designs.</p>
-              <p>✔ Removed malware and implemented a security checklist.</p>
-              <p>✔ Integrated an LMS system into the website.</p>
-              <p>✔ Independently managed website maintenance and updates.</p>
+              <p><strong>✔ Figma to Elementor Conversion:</strong> Transformed multiple Figma-designed pages into Elementor, ensuring a visually accurate and responsive layout.</p>
+              <p><strong>✔ Custom Page Development:</strong> Developed custom pages using <strong>HTML and CSS</strong> to meet specific design and functionality requirements beyond Elementor's built-in options.</p>
+              <p><strong>✔ Website Security & Malware Removal:</strong> Identified and removed malware, implementing a <strong>comprehensive security checklist</strong> to protect the website from future threats.</p>
+              <p><strong>✔ LMS System Integration:</strong> Successfully integrated a <strong>Learning Management System (LMS)</strong>, enabling structured course management and user-friendly access for learners.</p>
+              <p><strong>✔ Ongoing Website Maintenance:</strong> Independently managed <strong>website updates, content modifications, and performance optimizations</strong> to ensure smooth operation.</p>
             </div>
           </div>
 
