--- a/project-tecbrix.html
+++ b/project-tecbrix.html
@@ -135,9 +135,9 @@
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>TecBrix</h2>
-              <p>✔ Converted multiple Figma-designed pages into Elementor.</p>
-              <p>✔ Removed malware and implemented a security checklist.</p>
-              <p>✔ Independently managed website maintenance and updates.</p>
+              <p><strong>✔ Figma to Elementor Conversion:</strong> Transformed multiple Figma-designed pages into Elementor, ensuring a responsive and pixel-perfect layout.</p>
+              <p><strong>✔ Website Security & Malware Removal:</strong> Identified and removed malware, implementing a <strong>comprehensive security checklist</strong> to enhance site protection.</p>
+              <p><strong>✔ Ongoing Website Maintenance:</strong> Independently managed <strong>website updates, content modifications, and performance optimizations</strong> to ensure smooth functionality.</p>
             </div>
           </div>
 
