--- a/project-iconic-wrist.html
+++ b/project-iconic-wrist.html
@@ -135,7 +135,8 @@
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Iconic Wrist</h2>
-              <p>✔ Built a WooCommerce WordPress store using a pre-built theme and customized it with Elementor.</p>
+              <p><strong>✔ WooCommerce Store Development:</strong> Built a WordPress eCommerce website using a pre-built theme, tailored to showcase men's watches.</p>
+              <p><strong>✔ Elementor Customization:</strong> Customized the theme extensively using Elementor to match the client's specific design and functionality requirements.</p>
             </div>
           </div>
 
