--- a/project-tax-savvy-consultant.html
+++ b/project-tax-savvy-consultant.html
@@ -135,7 +135,9 @@
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Tax Savvy Consultant</h2>
-              <p>✔ Developed a WordPress website using a pre-built theme and customized it with Elementor.</p>
+              <p><strong>✔ WordPress Website Development:</strong> Developed a professional law consultancy website using a pre-built WordPress theme, ensuring a polished and user-friendly design.</p>
+              <p><strong>✔ Elementor Customization:</strong> Customized the theme extensively with Elementor to align with the client's specific branding and functional needs.</p>
+              <p><strong>✔ Tax Calculator Integration:</strong> Implemented a tax calculator plugin to enhance the website's functionality, providing users with an interactive tax estimation tool.</p>
             </div>
           </div>
 
