--- a/project-panhwar-institute.html
+++ b/project-panhwar-institute.html
@@ -135,7 +135,9 @@
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>GM Panhwar Institute</h2>
-              <p>✔ Designed and developed a WordPress website with a custom theme, built from a provided Figma design using HTML, CSS, and Bootstrap.</p>
+              <p><strong>✔ Custom WordPress Theme Development:</strong> Designed and developed a fully responsive, SEO-friendly WordPress theme from scratch, based on the client's Figma design.</p>
+              <p><strong>✔ Frontend Development:</strong> Built the theme using HTML, CSS, and Bootstrap, ensuring a modern and mobile-friendly user experience.</p>
+              <p><strong>✔ Books Showcase & Search Filter:</strong> Developed a dedicated section to showcase books with an advanced search and filtering system for easy navigation.</p>
             </div>
           </div>
 
