--- a/project-mg-chen3.html
+++ b/project-mg-chen3.html
@@ -135,11 +135,19 @@
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>MG Chen3</h2>
-              <p>✔ Successfully managed the migration of the website, ensuring a seamless transition with no downtime or data loss.</p>
-              <p>✔ Implemented security plugins and measures to enhance website protection and safeguard user data.</p>
-              <p>✔ Integrated ShipAny for logistics, enabling the display of courier codes on order success pages for improved customer experience.</p>
-              <p>✔ Integrated PMPro for memberships, including custom email verification and tiered benefits such as: Free coupons, Bulk purchase discounts, Priority notifications, Shipping fee discounts, In-store credits, Body Measurement system.</p>
-              <p>✔ Developed tailored features and custom solutions to meet the client's unique requirements, ensuring a highly personalized user experience.</p>
+              <p><strong>✔ Seamless Website Migration:</strong> Successfully managed the website migration, ensuring a smooth transition with zero downtime or data loss.</p>
+              <p><strong>✔ Enhanced Security Measures:</strong> Implemented security plugins and best practices to strengthen website protection and safeguard user data.</p>
+              <p><strong>✔ ShipAny Logistics Integration:</strong> Integrated ShipAny to enhance order processing, enabling the display of courier codes on order success pages for an improved customer experience.</p>
+              <p><strong>✔ PMPro Membership System:</strong> Integrated and customized PMPro for memberships, including custom email verification and tiered benefits such as:</p>
+              <ul>
+                <li>Free coupons</li>
+                <li>Bulk purchase discounts</li>
+                <li>Priority notifications</li>
+                <li>Shipping fee discounts</li>
+                <li>In-store credits</li>
+                <li>Body Measurement system</li>
+              </ul>
+              <p><strong>✔ Custom Feature Development:</strong> Designed and implemented tailored features and solutions to meet the client's unique requirements, ensuring a highly personalized user experience.</p>
             </div>
           </div>
 
