--- a/project-temporary-fence.html
+++ b/project-temporary-fence.html
@@ -135,7 +135,12 @@
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Temporary Fence LLC</h2>
-              <p>✔ Built a custom WordPress theme with geolocation-based redirection and dynamic content management for a fencing service company</p>
+              <p><strong>✔ Custom WordPress Theme Development:</strong> Designed and developed a fully responsive WordPress theme from scratch, based on the client's Figma design.</p>
+              <p><strong>✔ Geolocation-Based Redirection:</strong> Implemented location-based redirection to enhance user experience by directing visitors to the appropriate service page based on their location.</p>
+              <p><strong>✔ Dynamic Content Management:</strong> Developed a flexible and easy-to-manage backend, allowing the client to update services and content effortlessly.</p>
+              <p><strong>✔ Service Showcase & User Experience:</strong> Built a structured and user-friendly website to effectively showcase the company's fencing services.</p>
+              <p><strong>✔ Core Services Highlighted:</strong> Developed service pages to present detailed information about key offerings.</p>
+              <p><strong>✔ Fully Responsive & Cross-Browser Compatible:</strong> Ensured seamless functionality across all devices and browsers for an optimal user experience.</p>
             </div>
           </div>
 
