--- a/project-parking-lot-repair.html
+++ b/project-parking-lot-repair.html
@@ -137,7 +137,7 @@
               <h2>Parking Lot Repair NM</h2>
               <p><strong>✔ Custom WordPress Theme Development:</strong> Designed and developed a fully responsive WordPress theme from scratch, based on the client's Figma design.</p>
               <p><strong>✔ Service Showcase & User Experience:</strong> Built a structured and user-friendly website to effectively showcase the company's pavement maintenance and repair services.</p>
-              <p><strong>✔ Core Services Highlighted:</strong> Developed service pages to present detailed information about key offerings, including:</p>
+              <p><strong>✔ Core Services Highlighted:</strong> Developed service pages to present detailed information about key offerings.</p>
               <p><strong>✔ Fully Responsive & Cross-Browser Compatible:</strong> Ensured seamless functionality across all devices and browsers for an optimal user experience.</p>
             </div>
           </div>
