Update detail of projects

--- a/project-diamond-supreme.html
+++ b/project-diamond-supreme.html
@@ -135,9 +135,11 @@
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Diamond Supreme Foam</h2>
-              <p>
-                ✔ Revamped the entire theme of this Magento CMS eCommerce store using HTML, CSS, and JavaScript.
-              </p>
+              <p><strong>✔ Magento Theme Revamp:</strong> Updated and refined the entire theme of the Magento-based eCommerce store to restore its original design and functionality after a theme update.</p>
+              <p><strong>✔ HTML, CSS, and JavaScript Fixes:</strong> Identified and resolved styling issues, ensuring a visually consistent and polished appearance across all pages.</p>
+              <p><strong>✔ UI/UX Improvements:</strong> Adjusted layout structures, typography, and spacing to enhance user experience and readability.</p>
+              <p><strong>✔ Cross-Browser & Mobile Responsiveness:</strong> Fixed broken styles and optimized the theme for smooth performance on all devices and browsers.</p>
+              <p><strong>✔ Custom Code Adjustments:</strong> Made necessary modifications in JavaScript and CSS to align the design with the client's branding and usability preferences.</p>
             </div>
           </div>
 
