--- a/index.html
+++ b/index.html
@@ -288,7 +288,6 @@
 
     <!-- Resume Section -->
     <section id="resume" class="resume section">
-
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
@@ -296,7 +295,6 @@
       </div><!-- End Section Title -->
 
       <div class="container">
-
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -325,7 +323,6 @@
               <p><em>City College of Science and Commerce, Multan</em></p>
               <p>Studied the fundamentals of computer science, gaining basic knowledge of programming and IT concepts.</p>
             </div><!-- Edn Resume Item -->
-
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
@@ -351,13 +348,14 @@
                 <li><strong>System Integration & Website Management:</strong> Integrated an LMS into the website and independently managed client websites, delivering seamless functionality and timely updates.</li>
               </ul>
             </div><!-- Edn Resume Item -->
+          </div>
 
+          <div class="col-lg-12 cv-download text-center aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+            <a href="#">Download CV</a>
           </div>
 
         </div>
-
       </div>
-
     </section><!-- /Resume Section -->
 
     <!-- Portfolio Section -->
