--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           </div>
 
           <div class="col-lg-12 cv-download text-center aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-            <a href="#">Download CV</a>
+            <a href="https://usamakhalid847.github.io/portfolio/assets/pdf/resume-usama-khalid.pdf">Download CV</a>
           </div>
 
         </div>
