--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Usama Khalid Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <meta name="robots" content="index, follow">
 
   <!-- Favicons -->
   <link href="https://usamakhalid847.github.io/portfolio/assets/img/favicon.png" rel="icon">
