--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Usama Khalid Portfolio</title>
   <meta name="description" content="Experienced Web Developer specializing in WordPress, PHP, Bootstrap, and custom plugins. I build dynamic, user-friendly websites and optimize performance. Currently at Technology Wisdom, I develop custom WordPress themes and plugins, including Instant Emoji Reactions.">
-  <meta name="keywords" content="Web Developer, WordPress, PHP, Bootstrap, HTML, CSS, JavaScript, MySQL, WordPress Plugins, Custom Themes, SEO Optimization">
+  <meta name="keywords" content="Web Developer, WordPress, PHP, Bootstrap, HTML, CSS, JavaScript, MySQL, WordPress Plugins, Custom Themes">
   <meta name="robots" content="index, follow">
 
   <!-- Favicons -->
