--- a/index.html
+++ b/index.html
@@ -441,6 +441,18 @@
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
+            
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
+              <div class="portfolio-content h-100">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/imranshafi/hero-section.webp" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Imran Shafi</h4>
+                  <p>A WordPress website built using a Prebuilt theme.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/imranshafi/hero-section.webp" title="Imran Shafi" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-imranshafi.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
               <div class="portfolio-content h-100">
